k3s/kustomize/environments/prod/it-tools/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: it-tools
  labels:
    app: it-tools
spec:
  template:
     spec:
      containers:
        - name: it-tools
          image: registry.local.hejsan.xyz/corentinth/it-tools:latest
