k3s/kustomize/environments/prod/it-tools/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  routes:
    - kind: Rule
      match: Host(`it-tools.local.hejsan.xyz`)
      services:
        - name: it-tools
          port: http
      middlewares:
        - name: default-headers
